--- a/index.html
+++ b/index.html
@@ -1,31 +1,105 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" type="text/css" href="./css/styles.css">
 
+  <meta charset="UTF-8">
+
+  <title>Temp Conversions</title>
+
+  <link rel="stylesheet" type="text/css" href="./css/styles.css">
 
 </head>
 <body>
-  <table style="width:50%">
+  <h1> Table Conversion</h1>
+  <table style="width:50%" border="1">
     <tr>
       <th>Fahrenheit</th>
       <th>Celsius</th>
     </th>
     <tr>
-      <th>32°F</th>
-      <th>0°C</th>
+      <th>20°F</th>
+      <th>-6.66667°C</th>
     </tr>
     <tr>
-      <th>33°F</th>
-      <th>0.555556°C</th>
+      <th>25°F</th>
+      <th>-3.88889°C</th>
     <tr>
-      <th>34°F</th>
-      <th>1.11111°C</th>
+      <th>30°F</th>
+      <th>-1.11111°C</th>
     </tr>
     <tr>
       <th>35°F</th>
       <th>1.66667°C</th>
     </tr>
+    <tr>
+      <th>40°F</th>
+      <th>4.44444°C</th>
+    </tr>
+     <tr>
+      <th>45°F</th>
+      <th>7.22222°C</th>
+    </tr>
+     <tr>
+      <th>50°F</th>
+      <th>10°C</th>
+    </tr>
+     <tr>
+      <th>55°F</th>
+      <th>12.7778°C</th>
+    </tr>
+     <tr>
+      <th>60°F</th>
+      <th>15.5556°C</th>
+    </tr>
+     <tr>
+      <th>65°F</th>
+      <th>18.3333°C</th>
+    </tr>
+     <tr>
+      <th>70°F</th>
+      <th>21.1111°C</th>
+    </tr>
+     <tr>
+      <th>75°F</th>
+      <th>23.8889°C</th>
+    </tr>
+     <tr>
+      <th>80°F</th>
+      <th>26.6667°C</th>
+    </tr>
+     <tr>
+      <th>85°F</th>
+      <th>29.4444°C</th>
+    </tr>
+     <tr>
+      <th>90°F</th>
+      <th>32.2222°C</th>
+    </tr>
+     <tr>
+      <th>95°F</th>
+      <th>35°C</th>
+    </tr>
+     <tr>
+      <th>100°F</th>
+      <th>37.7778°C</th>
+    </tr>
+     <tr>
+      <th>105°F</th>
+      <th>40.5556°C</th>
+    </tr>
+     <tr>
+      <th>110°F</th>
+      <th>43.3333°C</th>
+    </tr>
+     <tr>
+      <th>115°F</th>
+      <th>46.1111°C</th>
+    </tr>
+     <tr>
+      <th>120°F</th>
+      <th>48.8889°C</th>
+    </tr>
+
     
   </table>
 
